# eduset

./: .gitignore  README.md  pyproject.toml
app/: account_route.py  app.py  base_obj.py  class_route.py  forms.py  models.py  money_route.py
app/static/: style.css
app/templates/: account.html  base.html  blockchain.html  details.html  index.html  login.html  money_base.html  register.html  transfer.html
app/templates/account/: login.html  register.html
app/templates/class/: base.html  index.html  new.html  stream.html
app/templates/class/all/: index.html  new.html
app/templates/class/each/: base.html  stream.html  work.html  works.html
app/templates/money/: base.html  blockchain.html  index.html  transactions.html  transfer.html
instance/: users.db
