[project]
name = "eduset"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shizukani-cp", email = "to.maimai0606@gmail.com" }
]
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "email-validator>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eduset"]
